# language

./: .gitignore  CHANGELOG.md  CODERABBIT_FIXES.md  CODERABBIT_FIXES_ROUND2.md  DISTRIBUTION_QUICK_START.md  FIXES_SUMMARY.md  IMPROVEMENTS_v0.3.3.md  INSTALL_METHODS.md  LEVCODE_README.md  LICENSE  MANIFEST.in  MISSING_FEATURES.md  PRODUCTION_READY.md  PUBLISHING_GUIDE.md  README.md  READY_TO_PUBLISH.md  cargame.lvl  cargame.py  cli.txt  game.lvl  game.py  game_test.py  game_with_icon.py  install.sh  pong.lvl  pong_target.py  publish.sh  pyproject.toml  review.md  setup.py  space_test.py  syntax.md  test_breakpoints.lvl  test_comprehensive.lvl  test_edge_cases.lvl  test_output.py
DOCUMENTATION/: shape_dodger.lvl  sprite_dodger.lvl  syntax.md
docs/: ENGINE_SPECIFICATION.md  ERROR_CODES.md  README.md  SIMPLE_SYNTAX_V2.md  SYNTAX.md  examples.md  getting-started.md  index.html  syntax-reference.md
examples/: 01_hello_world.lvl  01_pong.lvl  02_moving_square.lvl  02_snake.lvl  03_breakout.lvl  03_two_squares.lvl  04_color_demo.lvl  04_space_invaders.lvl  05_fast_mover.lvl  05_flappy_bird.lvl  06_asteroids.lvl  07_pacman.lvl  08_tetris.lvl  09_platformer.lvl  10_galaga.lvl  README.md  SHAPES_GAMES_README.md  SUMMARY.txt  all_builtin_functions.lvl  car_racing.lvl  collision_detection.lvl  custom_icon_example.lvl  event_handling.game  event_handling.lvl  flappy_bird_complete.lvl  flappy_bird_game.lvl  flappy_shapes.lvl  flappy_shapes.py  guide.md  pong_complete.lvl  pong_game.lvl  pong_shapes.lvl  pong_shapes.py  space_shooter.lvl  space_shooter_basic.lvl  space_shooter_basic.py  space_shooter_complete.lvl  space_shooter_shapes.lvl  sprite_movement.game  sprite_movement.lvl  (+3 more)
gamelang/cli/: __init__.py  cli.py  main.py
gamelang/codegen/: __init__.py  code_generator.py
gamelang/core/: __init__.py  ast_node.py  source_location.py  token.py
gamelang/error/: __init__.py  error_reporter.py
gamelang/lexer/: __init__.py  lexer.py
gamelang/parser/: __init__.py  parser.py
gamelang/semantic/: __init__.py  semantic_analyzer.py  semantic_error.py  symbol_table.py
levlang/: __init__.py
levlang/cli/: __init__.py  cli.py  main.py
levlang/codegen/: __init__.py  block_generator.py  code_generator.py  simple_generator.py
levlang/core/: __init__.py  ast_node.py  exceptions.py  token.py  validators.py
levlang/error/: __init__.py  error_reporter.py
levlang/lexer/: __init__.py  lexer.py
levlang/parser/: __init__.py  block_parser.py  natural_parser.py  parser.py  simple_parser.py
levlang/runtime/: __init__.py  simple_runtime.py
levlang/semantic/: __init__.py  semantic_analyzer.py  semantic_error.py  symbol_table.py
tests/: __init__.py  test_cli.py  test_code_generator.py  test_e2e.py  test_error_pipeline.py  test_error_reporter.py  test_lexer.py  test_parser.py  test_performance.py  test_semantic_analyzer.py
useableexamples/: car.lvl  cli_guide.md  geometry_dash.lvl  guide.md  pong.lvl  pygame_example.lvl  space_shooter.lvl  syntax.md  vscode_guide.md
vscode-levlang/: CHANGELOG.md  INSTALL.md  README.md  package.json
vscode-levlang/syntaxes/: levlang.tmLanguage.json
website/: basics.md  contact.md  docs.md  editor.md  index.md  install.md  overview.md
website/examples/: pong.md  (+2 more)
(+6 files in other folders)
